force-app/main/default/objects/Account/fields/TotalPlazasRP__c.field-meta.xml
<CustomField>
    <fullName>TotalPlazasRP__c</fullName>
    <description>Total plazas RP</description>
    <label>Total plazas RP</label>
    <summaryFilterItems>
        <field>Plaza__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Residencia</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.EsFantasma__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.PlazaInhabilitada__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Plaza__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>