force-app/main/default/objects/Account/fields/TotalPlazasVacantesRP__c.field-meta.xml
<CustomField>
    <fullName>TotalPlazasVacantesRP__c</fullName>
    <description>Plazas que no han sido ocupadas aún y por tanto no se ha determinado si son públicas o privadas</description>
    <inlineHelpText>Plazas que no han sido ocupadas aún y por tanto no se ha determinado si son públicas o privadas</inlineHelpText>
    <label>Total plazas vacantes RP</label>
    <summaryFilterItems>
        <field>Plaza__c.TipoPlaza__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.EsFantasma__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Plaza__c.PlazaInhabilitada__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Plaza__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>