force-app/main/default/objects/Account/fields/TotalReservaPlaza__c.field-meta.xml
<CustomField>
    <fullName>TotalReservaPlaza__c</fullName>
    <description>Total reserva de plaza</description>
    <label>Total reserva de plaza</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Reserva de plaza</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>