force-app/main/default/objects/Account/fields/TrabajarSAP__c.field-meta.xml
<CustomField>
    <fullName>TrabajarSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo nos indica que el centro solo trabaja en SAP, en dicho caso no se harán envíos de episodios.</description>
    <inlineHelpText>Si se marca como verdadero indica que el centro solo trabaja en SAP y no se permitirán realizar envíos de oportunidades. Si se desmarca después de haber estado marcado contacte con su administrador para sincronizar los episodios, los residentes y las plazas del centro</inlineHelpText>
    <label>Trabajar solo en SAP</label>
    <type>Checkbox</type>
</CustomField>