force-app/main/default/objects/Account/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <description>Zona comercial a la que corresponde el prescriptor</description>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Comunidad__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Zona</valueSetName>
    </valueSet>
</CustomField>