force-app/main/default/objects/Account/recordTypes/CentroResidencia.recordType-meta.xml
<RecordType>
    <fullName>CentroResidencia</fullName>
    <active>true</active>
    <description>Tipo de registro para residencias o centros</description>
    <label>Centro/Residencia</label>
</RecordType>