force-app/main/default/objects/Account/recordTypes/Competidor.recordType-meta.xml
<RecordType>
    <fullName>Competidor</fullName>
    <active>true</active>
    <description>Tipo de registro para los competidores</description>
    <label>Competidor</label>
</RecordType>