force-app/main/default/objects/Account/recordTypes/Prescriptor.recordType-meta.xml
<RecordType>
    <fullName>Prescriptor</fullName>
    <active>true</active>
    <description>Tipo de registro para prescriptores</description>
    <label>Prescriptor</label>
</RecordType>