force-app/main/default/objects/Account/validationRules/FormatoOtroTelefono.validationRule-meta.xml
<ValidationRule>
    <fullName>FormatoOtroTelefono</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
	AND( LEFT(OtroTelefono__c, 1) = &apos;+&apos;, 
		 LEFT(OtroTelefono__c, 3) &lt;&gt; &apos;+34&apos;, 
		 OR( LEN(OtroTelefono__c) &lt; 11,  
			 LEN(OtroTelefono__c) &gt; 16 
		), 	
	!ISBLANK(OtroTelefono__c) ),
	AND( LEFT(OtroTelefono__c, 3) = &apos;+34&apos;,  
		 OR( LEN(OtroTelefono__c) &lt; 12,  
			 LEN(OtroTelefono__c) &gt; 12 
		), 	
	!ISBLANK(OtroTelefono__c) ),
	AND( LEFT(OtroTelefono__c, 1) &lt;&gt; &apos;+&apos;, 
		 OR( LEN(OtroTelefono__c) &lt; 9,  
			 LEN(OtroTelefono__c) &gt; 9 
		), 	
	!ISBLANK(OtroTelefono__c) ),
	CONTAINS(OtroTelefono__c, &apos; &apos;)
)</errorConditionFormula>
    <errorDisplayField>OtroTelefono__c</errorDisplayField>
    <errorMessage>El número de teléfono no cumple el formato establecido</errorMessage>
</ValidationRule>