force-app/main/default/objects/Account/validationRules/ObligaCompetidorPrescriptorProvincia.validationRule-meta.xml
<ValidationRule>
    <fullName>ObligaCompetidorPrescriptorProvincia</fullName>
    <active>true</active>
    <description>Es obligatorio al crear un prescriptor o competiro rellenar la provincia</description>
    <errorConditionFormula>AND(
ISNEW(),
ShippingState = &apos;&apos;,
OR (
RecordType.DeveloperName= &apos;Prescriptor&apos;,
RecordType.DeveloperName=&apos;Competidor&apos;
)
)</errorConditionFormula>
    <errorMessage>Debes completar la provincia</errorMessage>
</ValidationRule>