force-app/main/default/objects/Account/listViews/Competidores.listView-meta.xml
<ListView>
    <fullName>Competidores</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Competidor</value>
    </filters>
    <label>Competidores</label>
</ListView>