force-app/main/default/objects/Account/listViews/FamiliaresAllegados.listView-meta.xml
<ListView>
    <fullName>FamiliaresAllegados</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.FamiliaAllegado</value>
    </filters>
    <label>Familiares/Allegados</label>
</ListView>