force-app/main/default/objects/Account/listViews/Prescriptores.listView-meta.xml
<ListView>
    <fullName>Prescriptores</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Prescriptor</value>
    </filters>
    <label>Prescriptores</label>
</ListView>