force-app/main/default/objects/Account/listViews/SERVICIOS_SOCIALES.listView-meta.xml
<ListView>
    <fullName>SERVICIOS_SOCIALES</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Servicios sociales</value>
    </filters>
    <label>SERVICIOS SOCIALES</label>
</ListView>